--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
     <link rel="stylesheet" href="bundle-login.css" />
   </head>
 
@@ -26,5 +30,6 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.437.0.min.js"></script>
   </body>
 </html>
