--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <div class="landing"></div>
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.437.0.min.js"></script>
   </body>
 </html>
